--- a/pages/index/home.wxss
+++ b/pages/index/home.wxss
@@ -23,3 +23,7 @@ page{
 .text-xxl{
   font-size: 44rpx;
 }
+.safe-btns{
+  padding-bottom: calc(250rpx + constant(safe-area-inset-bottom) / 2);
+  padding-bottom: calc(250rpx + env(safe-area-inset-bottom) / 2);
+}
